[gd_scene load_steps=17 format=3 uid="uid://3qpakq0doubi"]

[ext_resource type="Script" path="res://garden_gnome.gd" id="1_wrbkv"]
[ext_resource type="AudioStream" uid="uid://dwrlcowye113x" path="res://BlueLevel/ice-hit-ground-01.mp3" id="2_un0b4"]
[ext_resource type="Texture2D" uid="uid://b2mnmbkse6jw4" path="res://BlueLevel/snow_01_1k/textures/snow_01_ao_1k.png" id="2_v7hj2"]
[ext_resource type="Texture2D" uid="uid://dirkes0q3dytl" path="res://BlueLevel/ice_cube_texture/textures/Material_25_normal.png" id="3_xon71"]
[ext_resource type="Texture2D" uid="uid://dln52trxynqq4" path="res://BlueLevel/ice_cube_texture/textures/Material_25_metallicRoughness.png" id="4_cwt1p"]
[ext_resource type="PackedScene" uid="uid://76acdvtfdmqg" path="res://BlueLevel/ice_cube_texture/scene.gltf" id="5_vgmlm"]
[ext_resource type="Texture2D" uid="uid://lf73gv6otghy" path="res://BlueLevel/gold_star/textures/Star_baseColor.png" id="6_esycw"]
[ext_resource type="Texture2D" uid="uid://bn3cp28ayjtho" path="res://BlueLevel/gold_star/textures/Star_normal.png" id="7_akkmv"]
[ext_resource type="Texture2D" uid="uid://dd48tj8wjxs81" path="res://BlueLevel/gold_star/textures/Star_metallicRoughness.png" id="8_1x5pr"]
[ext_resource type="PackedScene" uid="uid://b0ljbfgqw8hl8" path="res://BlueLevel/garden_gnome_1k/garden_gnome_1k.tscn" id="10_6htus"]
[ext_resource type="AudioStream" uid="uid://g4add3xrevbq" path="res://BlueLevel/item-equip-6904.mp3" id="12_7wksm"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sflvr"]
albedo_texture = ExtResource("2_v7hj2")
metallic = 1.0
metallic_specular = 1.0
metallic_texture = ExtResource("3_xon71")
roughness_texture = ExtResource("4_cwt1p")

[sub_resource type="SphereMesh" id="SphereMesh_lva5b"]
material = SubResource("StandardMaterial3D_sflvr")
radius = 0.2
height = 0.3
radial_segments = 10
rings = 10

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3yyk8"]
albedo_texture = ExtResource("6_esycw")
roughness_texture = ExtResource("8_1x5pr")
normal_enabled = true
normal_texture = ExtResource("7_akkmv")

[sub_resource type="SphereMesh" id="SphereMesh_1o3fc"]
material = SubResource("StandardMaterial3D_3yyk8")
radius = 0.02
height = 0.02

[sub_resource type="BoxShape3D" id="BoxShape3D_ebbow"]

[node name="Garden_Gnome" type="Area3D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_wrbkv")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_un0b4")
unit_size = 100.0
panning_strength = 0.0

[node name="CPUParticles3D" type="CPUParticles3D" parent="."]
transform = Transform3D(-0.999116, -0.0420316, 0.000295642, 0.0420326, -0.999091, 0.0070274, 0, 0.00703362, 0.999975, -0.0870179, 0.0662039, -0.0565823)
emitting = false
amount = 2000
lifetime = 0.5
one_shot = true
explosiveness = 1.0
mesh = SubResource("SphereMesh_lva5b")
emission_shape = 3
emission_box_extents = Vector3(0.1, 0.1, 0.1)
particle_flag_align_y = true
particle_flag_rotate_y = true
direction = Vector3(0, 0, 0)
spread = 180.0
flatness = 1.0
initial_velocity_min = 2.0
initial_velocity_max = 2.0
radial_accel_min = 1.0
radial_accel_max = 1.0
damping_min = 9.091
damping_max = 9.091
scale_amount_min = 0.02
scale_amount_max = 0.05
split_scale = true
scale_curve_x = null
scale_curve_y = null
scale_curve_z = null

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.865

[node name="CPUParticles3D2" type="CPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000999181, 0.129852, -0.0375127)
emitting = false
lifetime = 0.3
one_shot = true
explosiveness = 1.0
mesh = SubResource("SphereMesh_1o3fc")
emission_shape = 2
emission_sphere_radius = 0.3
particle_flag_align_y = true
particle_flag_rotate_y = true
damping_min = 9.091
damping_max = 9.091
scale_amount_min = 0.4
scale_amount_max = 0.4

[node name="IceCube" parent="." instance=ExtResource("5_vgmlm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0176994, -0.0653226, -0.0980501)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000362754, 0.00384855, -0.00565612)
shape = SubResource("BoxShape3D_ebbow")

[node name="CollectingAudio" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("12_7wksm")

[node name="garden_gnome_1k2" parent="." instance=ExtResource("10_6htus")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, -0.124676)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
